// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> should render properly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-2 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #c92300;
}

.emotion-2:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-2:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
  aria-label="Progress Bar"
  className="emotion-0"
  onKeyPress={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    />
  </div>
</div>
`;

exports[`setShowKeyInfo() when user is using keyboard should show Legend on keyPress 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-2 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #c92300;
}

.emotion-2:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-2:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
  aria-label="Progress Bar"
  className="emotion-0"
  onKeyPress={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    />
  </div>
</div>
`;

exports[`setShowKeyInfo() when user is using keyboard should show Legend on keyPress 2`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-2 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #c92300;
}

.emotion-2:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-2:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-3 {
  position: absolute;
  top: 24px;
  right: 0;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
  z-index: 1;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #4a4a4a;
  border-radius: 2px;
  font-family: Roboto Condensed;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px;
}

.emotion-6 {
  width: 2px;
  height: 100%;
  background-color: #c92300;
}

.emotion-7 {
  color: #e0e0e0;
  padding-left: 8px;
}

.emotion-8 {
  color: #ffffff;
  font-weight: 700;
}

.emotion-10 {
  width: 2px;
  height: 100%;
  background-color: #b3b3b3;
}

.emotion-14 {
  width: 2px;
  height: 100%;
  background-color: #009f22;
}

.emotion-18 {
  width: 2px;
  height: 100%;
  background-color: #ebb52e;
}

.emotion-22 {
  width: 2px;
  height: 100%;
  background-color: #0074f5;
}

<div
  aria-label="Progress Bar"
  className="emotion-0"
  onKeyPress={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    />
  </div>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-4"
    >
      <div
        className="emotion-5"
      >
        <div
          className="emotion-6"
        />
        <div
          className="emotion-7"
        >
          <div>
            Failed:
          </div>
          <div
            className="emotion-8"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="emotion-5"
      >
        <div
          className="emotion-10"
        />
        <div
          className="emotion-7"
        >
          <div>
            Skipped:
          </div>
          <div
            className="emotion-8"
          >
            0
          </div>
        </div>
      </div>
      <div
        className="emotion-5"
      >
        <div
          className="emotion-14"
        />
        <div
          className="emotion-7"
        >
          <div>
            Succeeded:
          </div>
          <div
            className="emotion-8"
          >
            0
          </div>
        </div>
      </div>
      <div
        className="emotion-5"
      >
        <div
          className="emotion-18"
        />
        <div
          className="emotion-7"
        >
          <div>
            Running:
          </div>
          <div
            className="emotion-8"
          >
            0
          </div>
        </div>
      </div>
      <div
        className="emotion-5"
      >
        <div
          className="emotion-22"
        />
        <div
          className="emotion-7"
        >
          <div>
            Pending:
          </div>
          <div
            className="emotion-8"
          >
            0
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`setShowKeyInfo() when user is using keyboard should show Legend on keyPress 3`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-2 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #c92300;
}

.emotion-2:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-2:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
  aria-label="Progress Bar"
  className="emotion-0"
  onKeyPress={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    />
  </div>
</div>
`;

exports[`setShowKeyInfo() when user is using mouse should show Legend on mouseenter 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-2 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #c92300;
}

.emotion-2:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-2:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
  aria-label="Progress Bar"
  className="emotion-0"
  onKeyPress={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    />
  </div>
</div>
`;

exports[`setShowKeyInfo() when user is using mouse should show Legend on mouseenter 2`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-2 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #c92300;
}

.emotion-2:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-2:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-3 {
  position: absolute;
  top: 24px;
  right: 0;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
  z-index: 1;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #4a4a4a;
  border-radius: 2px;
  font-family: Roboto Condensed;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px;
}

.emotion-6 {
  width: 2px;
  height: 100%;
  background-color: #c92300;
}

.emotion-7 {
  color: #e0e0e0;
  padding-left: 8px;
}

.emotion-8 {
  color: #ffffff;
  font-weight: 700;
}

.emotion-10 {
  width: 2px;
  height: 100%;
  background-color: #b3b3b3;
}

.emotion-14 {
  width: 2px;
  height: 100%;
  background-color: #009f22;
}

.emotion-18 {
  width: 2px;
  height: 100%;
  background-color: #ebb52e;
}

.emotion-22 {
  width: 2px;
  height: 100%;
  background-color: #0074f5;
}

<div
  aria-label="Progress Bar"
  className="emotion-0"
  onKeyPress={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    />
  </div>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-4"
    >
      <div
        className="emotion-5"
      >
        <div
          className="emotion-6"
        />
        <div
          className="emotion-7"
        >
          <div>
            Failed:
          </div>
          <div
            className="emotion-8"
          >
            1
          </div>
        </div>
      </div>
      <div
        className="emotion-5"
      >
        <div
          className="emotion-10"
        />
        <div
          className="emotion-7"
        >
          <div>
            Skipped:
          </div>
          <div
            className="emotion-8"
          >
            0
          </div>
        </div>
      </div>
      <div
        className="emotion-5"
      >
        <div
          className="emotion-14"
        />
        <div
          className="emotion-7"
        >
          <div>
            Succeeded:
          </div>
          <div
            className="emotion-8"
          >
            0
          </div>
        </div>
      </div>
      <div
        className="emotion-5"
      >
        <div
          className="emotion-18"
        />
        <div
          className="emotion-7"
        >
          <div>
            Running:
          </div>
          <div
            className="emotion-8"
          >
            0
          </div>
        </div>
      </div>
      <div
        className="emotion-5"
      >
        <div
          className="emotion-22"
        />
        <div
          className="emotion-7"
        >
          <div>
            Pending:
          </div>
          <div
            className="emotion-8"
          >
            0
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`setShowKeyInfo() when user is using mouse should show Legend on mouseenter 3`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-2 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #c92300;
}

.emotion-2:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-2:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
  aria-label="Progress Bar"
  className="emotion-0"
  onKeyPress={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    />
  </div>
</div>
`;
